# netology_homeworks

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
files/: cooking.py  files.py  result.txt
objects_and_classes/: src.py
